--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "react": "^17.0.1",
+    "react-cursor-position": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-horizontal-scrolling-menu": "^0.7.10",
     "react-scripts": "4.0.1",
