--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "body-scroll-lock": "^3.1.5",
     "react": "^17.0.1",
     "react-cursor-position": "^3.0.3",
     "react-dom": "^17.0.1",
